= Changelog =

== 1.0.9 ==
  * Restored autoexec.py which is still needed for Dharma;
  * Added option to Auto-select NewChannel State setting based on Asterisk Version;
  * Added the ability to call back numbers from the voicemail list; 
  * Some other minor changes;

== 1.0.8 ==
  * Updated images (fanart and icons) to comply with this guideline: http://wiki.xbmc.org/index.php?title=Add-ons_for_XBMC_%28Development%29
  * Removed (unnecessary) check for Linux64 that was causing trouble with XBMC Eden(-pre). Thanks freebs (XBMC Forum member);
  * Added option to disable background service (so video is not going to be paused and notification popups are not going to be shown);
  * Added check for Front-end and Back-end versions to make sure they match;
  * Some other minor changes;

== 1.0.7 ==
  * Minor updates to make it compatible with the Official XBMC Eden(-pre) Add-on repository;

== 0.0.7 ==
  * Several fixes and improvements done by oneadvent (XBMC Forum member) Thanks!;
  * Made it compatible with Dharma and Eden XBMC releases;
    * Tested it on XBMC for Linux, Windows, XBMC4XBOX 3.0.1 and LiveCD;
  * Added some checks and instructions on server-side;
  * Added settings for VoiceMail notification timeout;
  * Added settings to display Caller ID and/or pause video only if ALERT_INFO matches;
  * Added setting to enable/disable DEBUG;
  * Updated py-asterisk library to version 0.2;
  * Fixed VoiceMail sorting;
  * Added a "Refresh" button, so new CDR and VM information is retrieved from Asterisk;
  * GUI moved from PAL to 720p default resolution;
  * Added fanart;

== 0.0.6 ==
  * Fixed support for both Asterisk 1.4 and Asterisk 1.6;
  * Added ability to delete Voice Mail;
  * Rewrote skin to avoid localization bug and changed layout;
  * Added Music Player controls while playing Voice Mail;
  * Plus a few other changes and fixes;

== 0.0.5 ==
  * Added new setting to redirect calls if ALERT_INFO matches;
  * Restricted AMI permissions;